--- a/resume.tex
+++ b/resume.tex
@@ -10,8 +10,8 @@
 \name{Bin Yuan}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
+  \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
+  \github[billryan8]{https://www.linkedin.com/in/billryan8}
   \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
 
 \section{\faGraduationCap\ Education}
