--- a/resume.tex
+++ b/resume.tex
@@ -7,18 +7,12 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Hassan Ahmed}
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
-  \github[billryan8]{https://www.linkedin.com/in/billryan8}
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
-
-\section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+  \github[MeetHassan]{https://github.com/MeetHassan}
+  \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}
 
 \section{\faUsers\ Experience}
 \datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
@@ -29,6 +23,12 @@ Brief introduction: xxx.
   \item Optimized xxx 5\%
   \item xxx
 \end{itemize}
+
+\section{\faGraduationCap\ Education}
+\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
+\textit{Master student} in Electronics Engineering (EE), expected March 2016
+\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
+\textit{B.S.} in Electronics Engineering (EE)
 
 \datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
 \role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
