--- a/resume.tex
+++ b/resume.tex
@@ -10,9 +10,10 @@
 \name{Hassan Ahmed}
 
 \basicInfo{
+  \website[MeetHassan.net]{https://MeetHassan.net}
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
   \github[MeetHassan]{https://github.com/MeetHassan}
-  \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}
+  \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
 \section{\faUsers\ Experience}
 \datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
