--- a/resume.tex
+++ b/resume.tex
@@ -10,10 +10,15 @@
 \name{Hassan Ahmed}
 
 \basicInfo{
-  \website[MeetHassan.net]{https://MeetHassan.net}
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
-  \github[MeetHassan]{https://github.com/MeetHassan}
+  \github[MeetHassan]{https://www.linkedin.com/in/billryan8}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
+
+\section{\faGraduationCap\ Education}
+\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
+\textit{Master student} in Electronics Engineering (EE), expected March 2016
+\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
+\textit{B.S.} in Electronics Engineering (EE)
 
 \section{\faUsers\ Experience}
 \datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
@@ -24,12 +29,6 @@ Brief introduction: xxx.
   \item Optimized xxx 5\%
   \item xxx
 \end{itemize}
-
-\section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
 
 \datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
 \role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
