--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
-  \github[MeetHassan]{https://www.linkedin.com/in/billryan8}
+  \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
 \section{\faGraduationCap\ Education}
