--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,7 @@
 \name{Hassan Ahmed}
 
 \basicInfo{
-  \website[MeetHassan.net]{https://MeetHassan.net}
+  \home[MeetHassan.net]{https://MeetHassan.net}
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
