--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,8 @@
 \name{Hassan Ahmed}
 
 \basicInfo{
-  \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\ 
+  \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\
+  \website[MeetHassan.net]{http://MeetHassan.net}
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
