--- a/resume.tex
+++ b/resume.tex
@@ -11,7 +11,7 @@
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\
-  \web[MeetHassan.net]{http://MeetHassan.net}
+  \Mundus[MeetHassan.net]{http://MeetHassan.net}
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
