--- a/resume.tex
+++ b/resume.tex
@@ -3,6 +3,8 @@
 \documentclass{resume}
 %\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
+\usepackage{marvosym}
+\usepackage{url}
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
@@ -11,7 +13,7 @@
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\
-  \url[MeetHassan.net]{http://MeetHassan.net}
+  \Mundus~\url[MeetHassan.net]{http://MeetHassan.net}
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
