--- a/resume.tex
+++ b/resume.tex
@@ -13,8 +13,7 @@
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\
-  \Mundus~\href{website name}{www.MeetHassan.net}
-  \Mundus~\url{www.MeetHassan.net}
+  \Mundus~\href{MeetHassan.net}{www.MeetHassan.net}
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
