--- a/resume.tex
+++ b/resume.tex
@@ -13,7 +13,7 @@
 
 \basicInfo{
   \email{hassan.j.ahmed@hotmail.com} \textperiodcentered\
-  \Mundus~\href{www.MeetHassan.net}{gg}
+  \Mundus~\href{www.MeetHassan.net}{MeetHassan.net}
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
