--- a/resume.tex
+++ b/resume.tex
@@ -1,5 +1,3 @@
-% !TEX program = xelatex
-
 \documentclass{resume}
 %\usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
@@ -17,6 +15,12 @@
   \github[MeetHassan]{https://github.com/MeetHassan}
   \linkedin[hassanjahmed]{https://www.linkedin.com/in/hassanjahmed}}
 
+\section{\faGraduationCap\ Education}
+\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
+\textit{Master student} in Electronics Engineering (EE), expected March 2016
+\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
+\textit{B.S.} in Electronics Engineering (EE)
+
 \section{\faUsers\ Experience}
 \datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
 \role{Summer Intern}{Manager: xxx}
@@ -26,12 +30,6 @@ Brief introduction: xxx.
   \item Optimized xxx 5\%
   \item xxx
 \end{itemize}
-
-\section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{National University of Computer & Emerging Sciences (FAST)}, Pakistan}{2006 -- 2010}
-\textit{Bachelor student} in Computer Sciences (CS), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
 
 \datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
 \role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
