--- a/resume.tex
+++ b/resume.tex
@@ -17,13 +17,13 @@
 
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
+\datedsubsection{\textbf{Bombora} New York, NY}{2014 -- Present}
+\role{Senior Software Engineer}{Manager: Anthony Livhits}
+Bombora integrates Intent Data. Receiving billions of impression on its system every month, Bombora tags and monitors the consumption of content across the B2B web and organize B2B buyers into targetable segments based on the topics they are searching.  like RabbitMQ, MVC C#, Mongo DB, Apache Pig, Apache Storm and Hadoop to analyze and store data.
 \begin{itemize}
   \item Implemented xxx feature
   \item Optimized xxx 5\%
-  \item xxx
+  \item Technologies: GCP, AWS, C#, JAVA, Mongo DB, Apache Pig/Storm/Beam and Hadoop
 \end{itemize}
 
 \section{\faGraduationCap\ Education}
