--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@ Bombora integrates Intent Data. Receiving billions of impression on its system e
 \begin{itemize}
   \item Implemented xxx feature
   \item Optimized xxx 5\%
-  \item Technologies: GCP, AWS, C\#, JAVA, Mongo DB, Apache Pig/Storm/Beam and Hadoop
+  \item Technologies: GCP, AWS, JAVA, Mongo DB, Apache Pig/Storm/Beam and Hadoop
 \end{itemize}
 
 \section{\faGraduationCap\ Education}
